# TracEon

./: .gitignore  CMakeLists.txt  Cache.cpp  Cache.h  DecodedRecordTypes.h  FileReader.cpp  FileReader.h  IEncodingStrategy.cpp  IEncodingStrategy.h  LICENSE  PlainTextStrategy.cpp  PlainTextStrategy.h  QualityScoreRleStrategy.cpp  QualityScoreRleStrategy.h  README.md  RecordTypes.h  SmartStrategy.cpp  SmartStrategy.h  TwoBitDnaStrategy.cpp  TwoBitDnaStrategy.h  benchmark_disk.cpp  benchmark_traceon.cpp  comprehensive_benchmark.cpp  gcp_benchmark.cpp  library.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
test_data/: simple.fasta  simple.fastq
tests/: CacehTests.cpp  CacheTests.cpp  FastqTests.cpp  QualityScoreStrategyTests.cpp  SmartStrategyTests.cpp  TwoBitStrategyTests.cpp  main.cpp
